# Order-system

./: .gitignore  pyproject.toml
order_system/order/: models.py  views.py
order_system/order/migrations/: 0001_initial.py
order_system/order/templates/order/: add_order.html  order_list.html
order_system/order_system/: asgi.py  settings.py  urls.py  wsgi.py
