[tool.poetry]
name = "system-order"
version = "0.1.0"
description = ""
authors = ["Zayniddin <126386572+tettle2806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
